Add new branch test-starwars

--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-  </head>
-  <body>
-    <p>Hello World</p>
-    <p>ajout de la branche test-jfstech</p>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Star Wars</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
+</head>
+
+<body>
+  <!--
+        <audio autoplay preload="auto">
+                <source src="swsong.mp3">
+        </audio>
+        -->
+
+  <div class="stars"></div>
+  <div class="twinkling"></div>
+  <div class="intro">
+    <p>
+      A long time ago in a galaxy far, </br>far away....
+    </p>
+  </div>
+  <div class="logo">
+    <div>
+      <img src="images/becode.png">
+    </div>
+  </div>
+  <div class="texte">
+    <div>
+      <h1>
+        EPISODE 182
+      </h1>
+      <h3>
+        L'Empire Disney</br>abuse un peu
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus eu nisl sed vehicula. Ut volutpat accumsan nunc non pellentesque. Duis convallis pellentesque tincidunt. Nullam et dui ac ante efficitur aliquet quis maximus massa. Maecenas
+        ultricies magna vel mattis mattis.
+      </p>
+      <p>
+        Praesent semper est sed nisi dignissim, eget ultrices risus sollicitudin. Praesent ipsum nisi, venenatis in elit sed, cursus laoreet orci. Quisque ut euismod lacus. Ut consectetur purus at tempor placerat. Aliquam pellentesque, ligula in
+        ullamcorper efficitur, turpis turpis suscipit nibh, ut fringilla ex felis non nulla.
+      </p>
+      <p>
+        Nulla ac risus eu arcu placerat vulputate at ut orci. Aliquam nibh augue, vehicula eget nisl vel, dictum gravida tellus. Proin maximus, elit vitae interdum molestie, libero odio laoreet neque, nec blandit risus mauris eu lacus. Nunc eu turpis
+        non erat facilisis mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+      </p>
+    </div>
+  </div>
+</body>
+
 </html>
